--- a/src/styles/mediaQuery.scss
+++ b/src/styles/mediaQuery.scss
@@ -9,15 +9,15 @@
           height: 15%;
 
           > img {
-            &:first-of-type{
-                height: 3rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            &:first-of-type {
+              height: 3rem;
+              display: flex;
+              justify-content: center;
+              align-items: center;
             }
-           &:last-of-type{
-            display: none;
-           }
+            &:last-of-type {
+              display: none;
+            }
           }
         }
         &:nth-child(2) {
@@ -56,8 +56,56 @@
       display: block;
     }
   }
+  footer {
+    padding: 0;
+
+    gap: 2rem;
+
+    .conrainer {
+      flex-direction: column;
+
+      > div {
+       
+
+        &:first-of-type {
+          border-radius: 0px;
+
+          padding: 0.8rem;
+        }
+        > h4 {
+          text-align: center;
+          margin-bottom: 0.1rem;
+        }
+        > p {
+          font-size: 0.9rem;
+        }
+        &:last-of-type {
+          border-radius: 0px;
+
+          padding: 0.5rem 0.8rem;
+          gap: 0.3rem;
+          > div {
+            > h5 {
+              font-size: 0.7rem;
+            }
+
+            // gap: .1rem;
+            > ul {
+              gap: 0.7rem;
+              > a {
+                font-size: 0.8rem;
+              }
+            }
+            > p {
+              font-size: 0.7rem;
+            }
+          }
+        }
+      }
+    }
+    
+  }
 }
 
-@media screen and (max-width:420px) {
-  
+@media screen and (max-width: 420px) {
 }
