--- a/src/styles/mediaQuery.scss
+++ b/src/styles/mediaQuery.scss
@@ -57,12 +57,13 @@
     }
   }
   footer {
-    padding: 0;
+    padding: .6rem;
 
     gap: 2rem;
 
     .conrainer {
       flex-direction: column;
+      width: 80%;
 
       > div {
        
@@ -70,7 +71,7 @@
         &:first-of-type {
           border-radius: 0px;
 
-          padding: 0.8rem;
+          padding: 0.5rem;
         }
         > h4 {
           text-align: center;
@@ -80,7 +81,7 @@
           font-size: 0.9rem;
         }
         &:last-of-type {
-          border-radius: 0px;
+          border-radius: 0  0 8px 8px;
 
           padding: 0.5rem 0.8rem;
           gap: 0.3rem;
@@ -108,4 +109,58 @@
 }
 
 @media screen and (max-width: 420px) {
+  footer {
+    padding: .6rem;
+
+    gap: 2rem;
+
+    .conrainer {
+      flex-direction: column;
+      width: 80%;
+
+      > div {
+       
+
+        &:first-of-type {
+          border-radius: 0px;
+
+          padding: 0.5rem;
+        }
+        > h4 {
+          text-align: center;
+          margin-bottom: 0.1rem;
+        }
+        > p {
+          font-size: 0.5rem;
+        }
+        &:last-of-type {
+          border-radius: 0  0 8px 8px;
+
+          padding: 0.5rem 0.8rem;
+          gap: 0.3rem;
+          > div {
+            > h5 {
+              font-size: 0.7rem;
+            }
+
+            // gap: .1rem;
+            > ul {
+              gap: 0.7rem;
+              > a {
+                font-size: 0.4rem;
+              }
+            }
+            > p {
+              font-size: 0.7rem;
+            }
+          }
+        }
+      }
+    }
+    .bottom{
+        font-size: .5rem;
+    }
+    
+  }
+
 }
